# intrasm_engine

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  setup.py
benchmark/: README.md  utils.py  (+14 more)
intrasm_engine/: CMakeLists.txt  __init__.py
intrasm_engine/common/: README.md  __init__.py  compound_streams.py  cubin_loading_utils.py  cutlass_utils.py  external_kernels.py  loading_utils.py  sputnik_cuda_spmm_symbol_table.txt  sputnik_loading_utils.py  triton_utils.py  utils.py
intrasm_engine/common/huggingface/: README.md
intrasm_engine/common/huggingface/altered_modeling/: bloom.py  llama.py  opt.py
intrasm_engine/common/include/: helper_CUDAGraphConstructor.cu.h  helper_cuda_errors.cu.h  helper_cuda_graph.cu.h  helper_cusp.cu.h  helper_kernels.cu.h
intrasm_engine/pytorch/: __init__.py  cuda_multiprocessing_sync.py  horizontal_rewriter.py  huggingface_layer_modifier.py  huggingface_rewriter.py  rewriter.py  rewriting_rules.py  sparse_tensor_utils.py  utils.py
intrasm_engine/pytorch/cpp_extensions/: CUDAGraphConstructor.py  __init__.py  cuda_graph_constructor.py  cutlass_layers_and_funcs.py  layers_and_funcs_utils.py  sputnik_layers_and_funcs.py  torch_layers_and_funcs.py
intrasm_engine/pytorch/cpp_extensions/layers_and_funcs/: cutlass.py  fix.py  interleaved_linear.py  interleaved_linear_fp16.py  interleaved_linear_semistructured_half.py  non_interleaved_linear.py  sparta.py  sputnik.py  torch.py  utils.py
intrasm_engine/pytorch/csrc/: MyStackClass.cpp  common.h  extensions.h
intrasm_engine/tuning/: README.md  my_autograd_func_tuner.py
(+48 files in other folders)
